# MDVWB

./: .gitignore  AGENTS.md  CMakeLists.txt  MDVWB.cpp  MDVWB.h  README.md  STEP02.md  STEP03.md  STEP04.md  STEP05.md  STEP06.md  STEP07.md  STEP08.md  STEP09.md  STEP10.md  mdv_buses_config.cpp  mdv_buses_config.h  mdv_config.cpp  mdv_config.h  mdv_device.cpp  mdv_device.h  mdv_discovery.cpp  mdv_discovery.h  mdv_driver.cpp  mdv_driver.h  mdv_metadata.cpp  mdv_metadata.h  mdv_mosquitto.cpp  mdv_mosquitto.h  mdv_mqtt.cpp  mdv_mqtt.h  mdv_protocol.cpp  mdv_protocol.h  mdv_serial.cpp  mdv_serial.h  mdvwb_discovery_runner.cpp  mdvwb_discovery_runner.h  mdvwb_manager_cli.cpp  mdvwb_manager_cli.h  mdvwb_manager_main.cpp  (+6 more)
.github/workflows/: build-arm64-offline.yml
config/: buses.example.json
deploy/: OFFLINE_INSTALL.md  install_service_control.sh  install_wirenboard.sh  mdvwb-bus  mdvwb-manager.env  mdvwb-manager.service  mdvwb-run  mdvwb-service-control.js  mdvwb.env  mdvwb.service  mdvwb@.service  offline-install.sh
docs/: DEVELOPER.md  INSTALLATION.md  WEB_AND_FANCOILS.md  buses-config.md
tests/: mdv_buses_config_test.cpp  mdvwb_discovery_runner_test.cpp  mdvwb_manager_cli_test.cpp  mdvwb_manager_mqtt_test.cpp  mdvwb_migration_test.cpp  mdvwb_service_sync_test.cpp  mdvwb_web_model_test.mjs
www/mdvwb/: app.js  index.html  model.js  mqtt-client.js  styles.css
